--- a/calculadora/index.html
+++ b/calculadora/index.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Calculadora</title>
-    <script defer src="js/index.js"></script>
+
+    <link rel="stylesheet" href="static/style.css">
+    <script defer src="static/index.js"></script>
 </head>
 
 <body>
